[metadata]
name = pycallingcards
description = "Calling cards data analysis in Python."
author = "The-Mitra-Lab"
version = 0.0.6
author_email = "rmitra@wustl.edu"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/The-Mitra-Lab/pycallingcards
license = BSD 3-Clause License
license_file = LICENSE
platform = any

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    numpy >= 1.22.3
    pandas >= 1.4.3
    tqdm >= 4.63.0
    scipy >= 1.8.1
    anndata >= 0.8.0
    numba >= 0.55.2
    matplotlib >= 3.5.2
    scanpy >= 1.9.1
    seaborn >= 0.12.1
    pybedtools >= 0.9.0
    appdirs >= 1.4.4
    pyBigWig >= 0.3.18
    mudata >= 0.2.1
    statsmodels >= 0.13.5
